--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header span {
     min-height: 100vh;
     /* 📍 Свойства flexbox для размещения container-a вертикально по центру */
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
